# calldex

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: remote-connectivity-plan.md
src/calldex/: __init__.py  agent.py  codex_service.py  desktop_ipc.py  mcp.py  runtime.py  web.py
tests/: test_agent.py  test_codex_service.py  test_desktop_ipc.py  test_runtime.py  test_web.py
web/: README.md  package-lock.json  package.json  vitest.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/: _proxy.ts
web/app/api/health/: route.ts
web/app/api/livekit/token/: route.ts
web/app/api/projects/: route.ts
web/app/api/runs/[runId]/: route.ts
web/app/api/runs/[runId]/events/: route.ts
web/app/api/runs/[runId]/interrupt/: route.ts
web/app/api/runs/[runId]/steer/: route.ts
web/app/api/threads/: route.ts
web/app/api/threads/[threadId]/: route.ts
web/app/api/threads/[threadId]/archive/: route.ts
web/app/api/threads/[threadId]/fork/: route.ts
web/app/api/threads/[threadId]/messages/: route.ts
web/app/api/threads/[threadId]/turns/: route.ts
web/components/ai-elements/: code-block.tsx  message.tsx  persona.tsx  prompt-input.tsx  shimmer.tsx
web/components/calldex/: tool-activity.tsx
web/components/ui/: input.tsx  textarea.tsx
web/lib/: layout-preferences.ts  run-events.ts  tool-activity.ts
web/tests/: layout-preferences.test.ts  live-progress.test.ts  rendered-html.test.mjs  run-events.test.tsx  tool-activity.test.tsx
