[project]
name = "calldex"
version = "0.1.0"
description = "Operate Codex from a Gemini Live voice agent over LiveKit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116",
    "livekit-api>=1.0",
    "livekit-agents[google]~=1.5",
    "openai-codex==0.1.0b3",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.35",
]

[dependency-groups]
dev = [
    "pytest>=8.4",
    "pytest-asyncio>=1.2",
]

[project.scripts]
calldex = "calldex:main"
calldex-dashboard = "calldex.web:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"
